trab2 quase finalizado

--- a/grupo2/trabalho2_fakenews.ipynb
+++ b/grupo2/trabalho2_fakenews.ipynb
@@ -100,61 +100,51 @@
    "outputs": [],
    "source": [
     "using JuMP\n",
-    "using Ipopt  # Utilizamos Ipopt como o resolvedor padrão\n",
+    "using Ipopt \n",
     "using PyPlot\n",
     "\n",
     "function solveISR(β, γ, b, T, x1_init, x2_init, R, Q)\n",
-    "    k = length(T)            # Número de pontos de tempo\n",
-    "    T_max = T[end]           # Tempo final\n",
-    "    xw = [γ / β; γ / β]      # Waypoint desejado para x1 + x2\n",
+    "    k = length(T)\n",
+    "    T_max = T[end]  \n",
+    "    xw = [γ / β; γ / β]\n",
     "\n",
-    "    # Configuração do modelo\n",
-    "    m = Model(Ipopt.Optimizer)  # Substituímos Gurobi/Mosek por Ipopt\n",
+    "    m = Model(Ipopt.Optimizer)\n",
     "\n",
-    "    # Variáveis de estado e controle\n",
-    "    @variable(m, x1[1:T_max] >= 0)  # Ignorantes\n",
-    "    @variable(m, x2[1:T_max] >= 0)  # Espalhadores\n",
-    "    @variable(m, u[1:T_max] >= 0)   # Controle\n",
+    "    @variable(m, x1[1:T_max] >= 0)\n",
+    "    @variable(m, x2[1:T_max] >= 0)\n",
+    "    @variable(m, u[1:T_max] >= 0)\n",
     "\n",
-    "    # Condições iniciais\n",
     "    @constraint(m, x1[1] == x1_init)\n",
     "    @constraint(m, x2[1] == x2_init)\n",
     "\n",
-    "    # Dinâmica do modelo ISR\n",
     "    for t in 1:T_max - 1\n",
     "        @constraint(m, x1[t + 1] == x1[t] - β * x1[t] * x2[t] - b * u[t] * x1[t])\n",
     "        @constraint(m, x2[t + 1] == x2[t] + β * x1[t] * x2[t] - γ * x2[t]^2)\n",
     "    end\n",
     "\n",
-    "    # Função objetivo: minimizar controle + penalidade de desvio + tempo\n",
     "    @objective(m, Min, R * sum(u .^ 2) + Q * sum((x1[T] .+ x2[T] .- xw[1]) .^ 2))\n",
     "\n",
-    "    # Resolver o modelo\n",
     "    optimize!(m)\n",
     "\n",
-    "    # Extrair resultados\n",
     "    x1_opt = value.(x1)\n",
     "    x2_opt = value.(x2)\n",
     "    u_opt = value.(u)\n",
-    "    J1 = R * sum(u_opt .^ 2)  # Custo associado ao controle\n",
-    "    J2 = Q * sum((x1_opt[T] .+ x2_opt[T] .- xw[1]) .^ 2)  # Penalidade de desvio\n",
+    "    J1 = R * sum(u_opt .^ 2)\n",
+    "    J2 = Q * sum((x1_opt[T] .+ x2_opt[T] .- xw[1]) .^ 2)\n",
     "    return (J1, J2, x1_opt, x2_opt, u_opt)\n",
     "end\n",
     "\n",
-    "# Parâmetros do problema ISR\n",
-    "β = 0.4                  # Taxa de interação\n",
-    "γ = 0.1                  # Taxa de recuperação\n",
-    "b = 0.05                 # Taxa de controle\n",
-    "T = [1, 20, 50, 60, 80, 100, 120]      # Pontos de tempo de interesse\n",
-    "x1_init = 1.0            # Estado inicial de ignorantes\n",
-    "x2_init = 0.5            # Estado inicial de espalhadores\n",
-    "R = 0.001                  # Penalidade de controle\n",
-    "Q = 1.0                  # Penalidade de desvio\n",
+    "β = 0.4                \n",
+    "γ = 0.1               \n",
+    "b = 0.05                 \n",
+    "T = [1, 20, 50, 60, 80, 100, 120]      \n",
+    "x1_init = 1.0        \n",
+    "x2_init = 0.5          \n",
+    "R = 0.001            \n",
+    "Q = 1.0 \n",
     "\n",
-    "# Resolver o problema ISR\n",
     "(J1, J2, x1_opt, x2_opt, u_opt) = solveISR(β, γ, b, T, x1_init, x2_init, R, Q)\n",
     "\n",
-    "# Plotar resultados\n",
     "figure(figsize=(12, 4))\n",
     "plot(1:length(x1_opt), x1_opt, \"b-\", label=\"Ignorantes (x1)\")\n",
     "plot(1:length(x2_opt), x2_opt, \"r-\", label=\"Espalhadores (x2)\")\n",
@@ -162,7 +152,7 @@
     "legend()\n",
     "xlabel(\"Tempo\")\n",
     "ylabel(\"Valores\")\n",
-    "title(\"Dinâmica ISR com Controle\")\n",
+    "title(\"Controle Ótimo\")\n",
     "grid(true)"
    ]
   },
@@ -186,66 +176,54 @@
    "outputs": [],
    "source": [
     "using JuMP\n",
-    "using Ipopt  # Utilizamos Ipopt como o resolvedor padrão\n",
+    "using Ipopt\n",
     "using PyPlot\n",
     "\n",
-    "function solveISR(β, γ, b, T, x1_init, x2_init, λ, R, Q, U_max)\n",
-    "    k = length(T)            # Número de pontos de tempo\n",
-    "    T_max = T[end]           # Tempo final\n",
-    "    xw = [γ / β; γ / β]      # Waypoint desejado para x1 + x2\n",
+    "function solveISR(β, γ, b, T, x1_init, x2_init, R, Q, U_max)\n",
+    "    k = length(T)          \n",
+    "    T_max = T[end]     \n",
+    "    xw = [γ / β; γ / β] \n",
     "\n",
-    "    # Configuração do modelo\n",
-    "    m = Model(Ipopt.Optimizer)  # Substituímos Gurobi/Mosek por Ipopt\n",
+    "    m = Model(Ipopt.Optimizer)\n",
     "\n",
-    "    # Variáveis de estado e controle\n",
-    "    @variable(m, x1[1:T_max] >= 0)  # Ignorantes\n",
-    "    @variable(m, x2[1:T_max] >= 0)  # Espalhadores\n",
-    "    @variable(m, u[1:T_max] >= 0)   # Controle\n",
+    "    @variable(m, x1[1:T_max] >= 0)\n",
+    "    @variable(m, x2[1:T_max] >= 0)\n",
+    "    @variable(m, u[1:T_max] >= 0) \n",
     "\n",
-    "    # Condições iniciais\n",
     "    @constraint(m, x1[1] == x1_init)\n",
     "    @constraint(m, x2[1] == x2_init)\n",
     "\n",
-    "    # Dinâmica do modelo ISR\n",
     "    for t in 1:T_max - 1\n",
     "        @constraint(m, x1[t + 1] == x1[t] - β * x1[t] * x2[t] - b * u[t] * x1[t])\n",
     "        @constraint(m, x2[t + 1] == x2[t] + β * x1[t] * x2[t] - γ * x2[t]^2)\n",
     "    end\n",
     "\n",
-    "    # Restrição orçamentária para o controle u\n",
     "    @constraint(m, sum(u) <= U_max)\n",
     "\n",
-    "    # Função objetivo: minimizar controle + penalidade de desvio + tempo\n",
-    "    @objective(m, Min, R * sum(u .^ 2) + Q * sum((x1[T] .+ x2[T] .- xw[1]) .^ 2) + λ * T_max)\n",
+    "    @objective(m, Min, R * sum(u .^ 2) + Q * sum((x1[T] .+ x2[T] .- xw[1]) .^ 2))\n",
     "\n",
-    "    # Resolver o modelo\n",
     "    optimize!(m)\n",
     "\n",
-    "    # Extrair resultados\n",
     "    x1_opt = value.(x1)\n",
     "    x2_opt = value.(x2)\n",
     "    u_opt = value.(u)\n",
-    "    J1 = R * sum(u_opt .^ 2)  # Custo associado ao controle\n",
-    "    J2 = Q * sum((x1_opt[T] .+ x2_opt[T] .- xw[1]) .^ 2)  # Penalidade de desvio\n",
+    "    J1 = R * sum(u_opt .^ 2)\n",
+    "    J2 = Q * sum((x1_opt[T] .+ x2_opt[T] .- xw[1]) .^ 2)\n",
     "    return (J1, J2, x1_opt, x2_opt, u_opt)\n",
     "end\n",
     "\n",
-    "# Parâmetros do problema ISR\n",
-    "β = 0.4                  # Taxa de interação\n",
-    "γ = 0.1                  # Taxa de recuperação\n",
-    "b = 0.05                 # Taxa de controle\n",
-    "T = [1, 20, 50, 60]      # Pontos de tempo de interesse\n",
-    "x1_init = 1.0            # Estado inicial de ignorantes\n",
-    "x2_init = 0.5            # Estado inicial de espalhadores\n",
-    "λ = 0.01                 # Peso do tempo\n",
-    "R = 0.001                  # Penalidade de controle\n",
-    "Q = 1.0                  # Penalidade de desvio\n",
-    "U_max = 2             # Limite orçamentário para o controle\n",
+    "β = 0.4      \n",
+    "γ = 0.1            \n",
+    "b = 0.05               \n",
+    "T = [1, 20, 50, 60]     \n",
+    "x1_init = 1.0           \n",
+    "x2_init = 0.5              \n",
+    "R = 0.001             \n",
+    "Q = 1.0                \n",
+    "U_max = 2             \n",
     "\n",
-    "# Resolver o problema ISR\n",
-    "(J1, J2, x1_opt, x2_opt, u_opt) = solveISR(β, γ, b, T, x1_init, x2_init, λ, R, Q, U_max)\n",
+    "(J1, J2, x1_opt, x2_opt, u_opt) = solveISR(β, γ, b, T, x1_init, x2_init, R, Q, U_max)\n",
     "\n",
-    "# Plotar resultados\n",
     "figure(figsize=(12, 4))\n",
     "plot(1:length(x1_opt), x1_opt, \"b-\", label=\"Ignorantes (x1)\")\n",
     "plot(1:length(x2_opt), x2_opt, \"r-\", label=\"Espalhadores (x2)\")\n",
@@ -253,7 +231,7 @@
     "legend()\n",
     "xlabel(\"Tempo\")\n",
     "ylabel(\"Valores\")\n",
-    "title(\"Dinâmica ISR com Controle e Restrição Orçamentária\")\n",
+    "title(\"Controle com Restrição Orçamentária\")\n",
     "grid(true)"
    ]
   },
@@ -261,7 +239,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Controle em Tempo Real ##"
+    "## 6. Controle em Tempo Real ##\n",
+    "\n",
+    "A ideia consiste, basicamente, em fazer um controle de predição a cada instante de tempo estabelecido, sempre levando como referência o valor no horizonte para os próximos $T_f$ momentos, de forma que a cada instante que passa, se repete o mesmo procedimento."
    ]
   },
   {
@@ -269,123 +249,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## 7. Incertezas ##"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## 2. Modelo matemático ##\n",
+    "using JuMP\n",
+    "using Ipopt\n",
+    "using PyPlot\n",
     "\n",
-    "Esta seção deve conter uma discussão das hipóteses de modelagem feitas no problema (conforme a origem do problema: física? economia? redes sociais? ...). Explique a escolha das variáveis de decisão, as restrições e a função objetivo. Finalmente, mostre o problema de otimização escrite em forma padrão. Discute o tipo de modelo adotado (LP, QP, MIP, etc.). Equações devem ser formatadas em $\\LaTeX$ dentro do notebook Julia. Nesta seção, pode supor que **o leitor está familiarizado com a matéria\"**.\n",
+    "function solveISRStep(β, γ, b, x1_prev, x2_prev, xw, R, Q, U_max, horizon)\n",
+    "    m = Model(Ipopt.Optimizer)\n",
     "\n",
-    "Eis um exemplo de uma equação:\n",
+    "    @variable(m, x1[1:horizon + 1] >= 0)\n",
+    "    @variable(m, x2[1:horizon + 1] >= 0) \n",
+    "    @variable(m, u[1:horizon] >= 0) \n",
     "\n",
-    "$$\n",
-    "\\begin{bmatrix}\n",
-    "  1 & 2 \\\\\n",
-    "  3 & 4\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix} x \\\\ y \\end{bmatrix} =\n",
-    "\\begin{bmatrix} 5 \\\\ 6 \\end{bmatrix}\n",
-    "$$\n",
+    "    @constraint(m, x1[1] == x1_prev)\n",
+    "    @constraint(m, x2[1] == x2_prev)\n",
     "\n",
-    "Aqui está um exemplo de um problema de otimização no formato padrão:\n",
+    "    for t in 1:horizon\n",
+    "        @constraint(m, x1[t + 1] == x1[t] - β * x1[t] * x2[t] - b * u[t] * x1[t])\n",
+    "        @constraint(m, x2[t + 1] == x2[t] + β * x1[t] * x2[t] - γ * x2[t]^2)\n",
+    "    end\n",
     "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^n}}{\\text{maximize}}\\qquad& f_0(x) \\\\\n",
-    "\\text{sujeito a:}\\qquad& f_i(x) \\le 0 && i=1,\\dots,m\\\\\n",
-    "& h_j(x) = 0 && j=1,\\dots,r\n",
-    "\\end{aligned}\n",
-    "$$\n",
+    "    @constraint(m, sum(u) <= U_max)\n",
     "\n",
-    "Para algumas dicas rápidas sobre a utilizção de $\\LaTeX$, veja [este cheat sheet](http://users.dickinson.edu/~richesod/latex/latexcheatsheet.pdf)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## 3. Solução ##\n",
+    "    @objective(m, Min, R * sum(u .^ 2) + Q * sum((x1[end] + x2[end] - xw[1])^2))\n",
     "\n",
-    "Nesta seção, coloque seu código em Julia + JuMP e resolva o problema proposto. Seu código deve ser limpo (não macarrônico!), de fácil leitura, bem comentado e anotado e deve compilar sem erros em Julia 1.x, x$\\geq 1$! Não valem códigos em outras linguagens. **Vou rodar seu código para avaliar seu projeto**. Sugiro a utilização de múltiplos blocos de códigos separados por blocos de texto (células Markdown) explicando as várias partes da sua solução. Sugiro também a resolução de várias versões do seu problema, com modelos e hipóteses diferentes.\n",
+    "    optimize!(m)\n",
     "\n",
-    "É permitido chamar pacotes externos, mas evite a utilização de bibliotecas exóticas (pois, em geral, não rodam em todas as versões de Julia, e terei que instalar a mesma versão que você usou, ou rodar na plataforma Google Colab, que gostaria de evitar)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O número total de cavalos é: 10.0\n",
-      "O número total de jegues é: 0.0\n",
-      "O número total de cabras é: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Este é um exemplo de um bloco de código\n",
-    "using JuMP, Clp\n",
-    "m = Model(with_optimizer(Clp.Optimizer,LogLevel=0) )\n",
-    "bichos = [:cavalos, :jegues, :cabras]  # estes são os bichos \n",
-    "@variable(m, x[bichos] >= 0)          # as quantidades de cada um (não podem ser negativas)\n",
-    "@constraint(m, sum(x) <= 10)          # não podemos ter mais de 10 no total.\n",
-    "@objective(m, Max, x[:cavalos])        # queremos maximizar o número de cavalos\n",
-    "optimize!(m)\n",
+    "    u_opt = value(u[1])\n",
     "\n",
-    "for i in bichos\n",
-    "    println(\"O número total de \", i, \" é: \", JuMP.value.(x[i]))     # imprime o resultado na tela\n",
-    "end"
+    "    return u_opt\n",
+    "end\n",
+    "\n",
+    "function controlISRRealTime(β, γ, b, T, x1_init, x2_init, R, Q, U_max, horizon)\n",
+    "    T_max = T[end]          \n",
+    "    xw = [γ / β; γ / β]\n",
+    "\n",
+    "    x1_opt = [x1_init]\n",
+    "    x2_opt = [x2_init]\n",
+    "    u_opt = []\n",
+    "\n",
+    "    for t in 1:T_max\n",
+    "        u_t = solveISRStep(β, γ, b, x1_opt[end], x2_opt[end], xw, R, Q, U_max, horizon)\n",
+    "\n",
+    "        push!(u_opt, u_t)\n",
+    "\n",
+    "        x1_next = x1_opt[end] - β * x1_opt[end] * x2_opt[end] - b * u_t * x1_opt[end]\n",
+    "        x2_next = x2_opt[end] + β * x1_opt[end] * x2_opt[end] - γ * x2_opt[end]^2\n",
+    "\n",
+    "        push!(x1_opt, x1_next)\n",
+    "        push!(x2_opt, x2_next)\n",
+    "\n",
+    "        if abs(x1_next + x2_next - xw[1]) < 1e-3\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    return x1_opt, x2_opt, u_opt\n",
+    "end\n",
+    "\n",
+    "β = 0.4             \n",
+    "γ = 0.1                \n",
+    "b = 0.05               \n",
+    "T = 1:60             \n",
+    "x1_init = 1.0        \n",
+    "x2_init = 0.5  \n",
+    "R = 0.001            \n",
+    "Q = 1.0               \n",
+    "U_max = 2 \n",
+    "horizon = 5\n",
+    "\n",
+    "x1_opt, x2_opt, u_opt = controlISRRealTime(β, γ, b, T, x1_init, x2_init, R, Q, U_max, horizon)\n",
+    "\n",
+    "figure(figsize=(12, 4))\n",
+    "plot(1:length(x1_opt), x1_opt, \"b-\", label=\"Ignorantes (x1)\")\n",
+    "plot(1:length(x2_opt), x2_opt, \"r-\", label=\"Espalhadores (x2)\")\n",
+    "plot(1:length(u_opt), u_opt, \"g-\", label=\"Controle (u)\")\n",
+    "legend()\n",
+    "xlabel(\"Tempo\")\n",
+    "ylabel(\"Valores\")\n",
+    "title(\"Controle em Tempo Real\")\n",
+    "grid(true)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tenha certeza de que seu código compila corretamente! Rodarei seu código!**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## 4. Resultados e discussão ##\n",
+    "## 7. Incertezas ##\n",
     "\n",
-    "Neste seção, os resultados obtidos serão exibidos e discutidos. Mostre figuras, gráficos, imagens, curvas de compromisso, e o que mais puder melhor ilustrar seus resultados. A discussão deverá explicar o que significam os resultados e como interpretá-los. As limitações da sua abordagem/modelo também devem ser colocadas, bem como uma análise da sensibilidade dos resultados em relação às hipóteses feitas.\n",
-    "\n",
-    "\n",
-    "Utilize plots (veja exemplos  `PyPlot` [aqui](https://gist.github.com/gizmaa/7214002))\n",
-    "\n",
-    "Aqui está um exemplo de uma tabela (em Markdown):\n",
-    "\n",
-    "| Tabelas        | São           | Boas  |\n",
-    "| ------------- |:-------------:| -----:|\n",
-    "| col 3 é      | alinhado à direita |\\$1600 |\n",
-    "| col 2 é      | centrado      |  \\$12 |\n",
-    "| texto | também serve      |   \\$1 |\n",
-    "\n",
-    "### 4.A. Subseções devem ser utilizadas para organizar seu texto.\n",
-    "\n",
-    "#### 4.A.a. ou até subsubseções."
+    "Incertezas nos parâmetros ($\\beta , \\gamma, x_1, x_2$):\n",
+    "- O controle ótimo normal não lida bem com incertezas pois assume-se que tanto os parâmetros quanto os estados são perfeitamente conhecidos, se os valores reais forem diferentes dos utilizados no modelo, o controle pode ser inviável e completamente inadequado. \n",
+    "- O controle preditivo em tempo real lida melhor com as incertezas pois a cada passo o controle é recalculado com base no estado atual, dessa forma pode ser reajustado dinamicamente caso aja uma alteração nos parâmetros, da mesma forma que está continuamente medindo os estados $x_1 e x_2$ em tempo real.\n"
    ]
   },
   {
@@ -396,14 +350,7 @@
    "source": [
     "## 5. Conclusão ##\n",
     "\n",
-    "Faça um resumo do que encontrou e dos seus resultados, e fale de pelo menos uma direção na qual  seu trabalho pode ser desenvolvido no futuro, algo que poderia ser interessante em decorrência do seu projeto.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Fontes e referências"
+    "Pelos resultados encontrados, podemos visualizar graficamente o funcionamento do modelo ISR, de forma que conforme os ignorantes vão diminuindo, conforme o tempo passa e vão tendo os encontros I + S, e os espalhadores em certo momento aumentam com a diminuição dos ignorantes que se tornam espalhadores e com o tempo vão tendendo a zero a partir do momento que não há mais ignorantes. O controle também se mostrou com um comportamento coerente, sempre que aumento a relação entre ignorantes x espalhadores também há um aumento na ação de controle e a partir disso diminui mais drasticamente os ignorantes. A ação de controle também se mostrou afetada pela limitação de orçamento, de forma que no script com a restrição a ação é bem menor, mesmo estando com os mesmos parâmetros de antes. Para próximos passos, poderia ser adicionado uma nova restrição com a relação entre recuperados x espalhadores, como no modelo padrão do ISR, para se observar o comportamento completo do sistema.  "
    ]
   }
  ],
