--- a/grupo1/trabalho1_portfolio.ipynb
+++ b/grupo1/trabalho1_portfolio.ipynb
@@ -15,10 +15,9 @@
     "### Índice\n",
     "\n",
     "1. [Introdução](#1.-Introdução)\n",
-    "1. [Modelo Matemático](#2.-Modelo-Matemático)\n",
-    "1. [Solução](#3.-Solução)\n",
-    "1. [Resultados e Discussão](#4.-Resultados-e-discussão)\n",
-    "  1. [Subseção Opcional](#4.A.-Acrescente-subseções-se-necessário)\n",
+    "1. [Demonstração](#2.-Demonstração)\n",
+    "1. [Formulação](#3.-Formulação)\n",
+    "1. [Comparação com Markowitz](#4.-Comparação-com-Markowitz)\n",
     "1. [Conclusão](#5.-Conclusão)"
    ]
   },
@@ -30,16 +29,7 @@
    "source": [
     "## 1. Introdução ##\n",
     "\n",
-    "As primeiras frases devem dar um panorama geral do projeto. Em seguida, uma descrição mais detalhada do problema que será resolvido, uma breve história do surgimento do problema (com [citations](https://en.wikipedia.org/wiki/Citation)) que será abordado, porque é importante e interessante e quaisquer outros fatos correlatos que queira expor. A fonte dos dados utilizados deve ser explicitada (pesquisa? internet? gerados sinteticamente?). Também deve ser feito um esboço do restante do relatório.\n",
-    "\n",
-    "\n",
-    "Esta seção deve ter entre 300 e 600 palavras, e **deve ser acessível a leigos** (não deve ser suposto que o leitor desta seção cursou esta disciplina (COM361)). Podem incluir figuras se acharem convenientes:\n",
-    "\n",
-    "![fixit flowchart][flow]\n",
-    "\n",
-    "Para mais ajuda no uso de Markdown, veja [este link](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet).\n",
-    "\n",
-    "[flow]: https://s-media-cache-ak0.pinimg.com/736x/f5/75/c5/f575c53b93724808c6f0211890a54900.jpg"
+    "Neste trabalho foi abordado e estudado o comportamento de uma carteira de investimentos usando uma restrição probabilística do problema para alocação ótima da carteira, onde o objetivo central foi estabeler um mínimo de retorno $R_{min}$ com um nível de confiança $\\alpha$ para obtenção mais confiável dos dados. Essa formulação é muito útil em situações em que a segurança de um retorno mínimo é indispensável, como em investimentos institucionais ou estratégias conservadoras."
    ]
   },
   {
@@ -48,32 +38,60 @@
     "collapsed": true
    },
    "source": [
-    "## 2. Modelo matemático ##\n",
+    "## 2. Demonstração ##\n",
     "\n",
-    "Esta seção deve conter uma discussão das hipóteses de modelagem feitas no problema (conforme a origem do problema: física? economia? redes sociais? ...). Explique a escolha das variáveis de decisão, as restrições e a função objetivo. Finalmente, mostre o problema de otimização escrite em forma padrão. Discute o tipo de modelo adotado (LP, QP, MIP, etc.). Equações devem ser formatadas em $\\LaTeX$ dentro do notebook Julia. Nesta seção, pode supor que **o leitor está familiarizado com a matéria\"**.\n",
-    "\n",
-    "Eis um exemplo de uma equação:\n",
-    "\n",
-    "$$\n",
-    "\\begin{bmatrix}\n",
-    "  1 & 2 \\\\\n",
-    "  3 & 4\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix} x \\\\ y \\end{bmatrix} =\n",
-    "\\begin{bmatrix} 5 \\\\ 6 \\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "Aqui está um exemplo de um problema de otimização no formato padrão:\n",
+    "Considerando um LP na forma padrão e uma desigualdade linear incerta/probabilística, temos:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^n}}{\\text{maximize}}\\qquad& f_0(x) \\\\\n",
-    "\\text{sujeito a:}\\qquad& f_i(x) \\le 0 && i=1,\\dots,m\\\\\n",
-    "& h_j(x) = 0 && j=1,\\dots,r\n",
+    "\\underset{x}{\\text{min}}\\qquad& c^Tx \\\\\n",
+    "\\text{sujeito a:}\\qquad& a_i^T x \\le b_i && i=1,\\dots,m\\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Para algumas dicas rápidas sobre a utilizção de $\\LaTeX$, veja [este cheat sheet](http://users.dickinson.edu/~richesod/latex/latexcheatsheet.pdf)."
+    "Onde $a_i$ não é conhecido mas sabemos que obedece a uma distribuição gaussiana com esperança $\\bar{a}$ e matriz de covariância $\\Sigma_i$ positiva definida. E a partir disso podemos provar que $a_i^T x$ também é uma variável aleatória com distribuição gaussiana e sua média e variância podem ser encontradas da seguinte forma:\n",
+    "\n",
+    "### Cálculo da Esperança\n",
+    "\n",
+    "$$\n",
+    "y = a_i^T x\n",
+    "$$\n",
+    "\n",
+    "A esperança matemática de $ y $ é dada por:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}[y] = \\mathbb{E}[a_i^T x]\n",
+    "$$\n",
+    "\n",
+    "Como  $x$ é um vetor fixo e determinístico, ele pode ser retirado da expectativa. Temos:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}[a_i^T x] = x^T \\mathbb{E}[a_i]\n",
+    "$$\n",
+    "\n",
+    "Sabemos que $ a_i \\sim \\mathcal{N}(\\bar{a}_i, \\Sigma_i) $, portanto, a média de $ a_i $ é $ \\bar{a}_i $. Substituindo:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}[a_i^T x] = x^T \\bar{a}_i\n",
+    "$$\n",
+    "\n",
+    "Por fim:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}[y] = \\bar{a}_i^T x\n",
+    "$$\n",
+    "\n",
+    "### Cálculo da Variância\n",
+    "\n",
+    "$$\n",
+    "Var(y) = Var(a_i^T x)\n",
+    "$$\n",
+    "\n",
+    "Como neste caso, x é um vetor fixo e $ a_i \\sim \\mathcal{N}(\\bar{a}_i, \\Sigma_i) $ pode-se aplicar a fórmula padrão para uma combinação linear de variáveis gaussianas que é:\n",
+    "\n",
+    "$$\n",
+    "Var(a_i^T x) = x^T \\Sigma_i x\n",
+    "$$\n"
    ]
   },
   {
@@ -82,48 +100,84 @@
     "collapsed": true
    },
    "source": [
-    "## 3. Solução ##\n",
+    "## 3. Formulação ##\n",
     "\n",
-    "Nesta seção, coloque seu código em Julia + JuMP e resolva o problema proposto. Seu código deve ser limpo (não macarrônico!), de fácil leitura, bem comentado e anotado e deve compilar sem erros em Julia 1.x, x$\\geq 1$! Não valem códigos em outras linguagens. **Vou rodar seu código para avaliar seu projeto**. Sugiro a utilização de múltiplos blocos de códigos separados por blocos de texto (células Markdown) explicando as várias partes da sua solução. Sugiro também a resolução de várias versões do seu problema, com modelos e hipóteses diferentes.\n",
+    "Para formulação do problema, sabemos que a função objetivo do modelo é para maximizar o retorno esperado com a limitação da probabilidade de perda ao máximo $\\alpha$ e de forma que as alocações de x satisfaça $\\Sigma x_i$ e $x_i \\ge 0$. Assim, basta transformar a restrição em SOCP e utilizar na forma padrão para otimização, da seguinte forma:\n",
     "\n",
-    "É permitido chamar pacotes externos, mas evite a utilização de bibliotecas exóticas (pois, em geral, não rodam em todas as versões de Julia, e terei que instalar a mesma versão que você usou, ou rodar na plataforma Google Colab, que gostaria de evitar)."
+    "$$\n",
+    "Prob\\{p^T x \\geq R_{\\text{min}}\\} \\geq \\alpha\n",
+    "$$\n",
+    "\n",
+    "onde:\n",
+    "- $ p $: Vetor de retornos médios.\n",
+    "- $ x $: Vetor de pesos de alocação nos ativos.\n",
+    "- $ R_{\\text{min}} $: Retorno mínimo desejado.\n",
+    "- $ \\alpha $: Nível de confiança ($ 0 < \\alpha < 1 $).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "A probabilidade acumulada é expressa como:\n",
+    "\n",
+    "$$\n",
+    "Prob\\left\\{p^T x - R_{\\text{min}} \\geq \\Phi^{-1}(\\alpha) \\cdot \\sqrt{x^T \\Sigma x}\\right\\} \\geq 0\n",
+    "$$\n",
+    "\n",
+    "$ \\Phi^{-1}(\\alpha) $ é a quantidade da distribuição normal padrão associada ao nível de confiança $ \\alpha $.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "A inequação acima pode ser reescrita em termos determinísticos como:\n",
+    "\n",
+    "$$\n",
+    "p^T x - R_{\\text{min}} \\geq \\Phi^{-1}(\\alpha) \\cdot \\sqrt{x^T \\Sigma x}\n",
+    "$$\n",
+    "\n",
+    "Isso pode ser reorganizado para:\n",
+    "\n",
+    "$$\n",
+    "p^T x - \\Phi^{-1}(\\alpha) \\cdot \\sqrt{x^T \\Sigma x} \\geq R_{\\text{min}}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "Para que o problema possa ser resolvido usando otimização cônica, introduzimos uma variável auxiliar $ t $, tal que:\n",
+    "\n",
+    "$$\n",
+    "t \\geq \\sqrt{x^T \\Sigma x}\n",
+    "$$\n",
+    "\n",
+    "A restrição $ p^T x - \\Phi^{-1}(\\alpha) \\cdot t \\geq R_{\\text{min}} $ é linear em $ t $, e a condição $ t \\geq \\sqrt{x^T \\Sigma x} $ pode ser expressa como uma restrição de cone de segunda ordem:\n",
+    "\n",
+    "$$\n",
+    "\\| \\Sigma^{1/2} x \\|_2 \\leq t\n",
+    "$$\n",
+    "\n",
+    "onde $ \\| \\cdot \\|_2 $ denota a norma $ \\ell_2 $.\n",
+    "\n",
+    "---\n",
+    "Assim, o SOCP final fica da seguinte forma:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\underset{x}{\\text{max}}\\qquad& \\bar{p}^T x \\\\\n",
+    "\\text{sujeito a:}\\qquad& p^T x - t \\cdot \\| \\Sigma^{1/2} x \\|_2 \\geq R_{\\text{min}},\\\\ \\qquad& \\Sigma x_i = 1, x_i \\geq 0\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O número total de cavalos é: 10.0\n",
-      "O número total de jegues é: 0.0\n",
-      "O número total de cabras é: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Este é um exemplo de um bloco de código\n",
-    "using JuMP, Clp\n",
-    "m = Model(with_optimizer(Clp.Optimizer,LogLevel=0) )\n",
-    "bichos = [:cavalos, :jegues, :cabras]  # estes são os bichos \n",
-    "@variable(m, x[bichos] >= 0)          # as quantidades de cada um (não podem ser negativas)\n",
-    "@constraint(m, sum(x) <= 10)          # não podemos ter mais de 10 no total.\n",
-    "@objective(m, Max, x[:cavalos])        # queremos maximizar o número de cavalos\n",
-    "optimize!(m)\n",
-    "\n",
-    "for i in bichos\n",
-    "    println(\"O número total de \", i, \" é: \", JuMP.value.(x[i]))     # imprime o resultado na tela\n",
-    "end"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "**Tenha certeza de que seu código compila corretamente! Rodarei seu código!**"
+    "## 4. Comparação com Markowitz ##\n"
    ]
   },
   {
@@ -132,42 +186,7 @@
     "collapsed": true
    },
    "source": [
-    "## 4. Resultados e discussão ##\n",
-    "\n",
-    "Neste seção, os resultados obtidos serão exibidos e discutidos. Mostre figuras, gráficos, imagens, curvas de compromisso, e o que mais puder melhor ilustrar seus resultados. A discussão deverá explicar o que significam os resultados e como interpretá-los. As limitações da sua abordagem/modelo também devem ser colocadas, bem como uma análise da sensibilidade dos resultados em relação às hipóteses feitas.\n",
-    "\n",
-    "\n",
-    "Utilize plots (veja exemplos  `PyPlot` [aqui](https://gist.github.com/gizmaa/7214002))\n",
-    "\n",
-    "Aqui está um exemplo de uma tabela (em Markdown):\n",
-    "\n",
-    "| Tabelas        | São           | Boas  |\n",
-    "| ------------- |:-------------:| -----:|\n",
-    "| col 3 é      | alinhado à direita |\\$1600 |\n",
-    "| col 2 é      | centrado      |  \\$12 |\n",
-    "| texto | também serve      |   \\$1 |\n",
-    "\n",
-    "### 4.A. Subseções devem ser utilizadas para organizar seu texto.\n",
-    "\n",
-    "#### 4.A.a. ou até subsubseções."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## 5. Conclusão ##\n",
-    "\n",
-    "Faça um resumo do que encontrou e dos seus resultados, e fale de pelo menos uma direção na qual  seu trabalho pode ser desenvolvido no futuro, algo que poderia ser interessante em decorrência do seu projeto.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Fontes e referências"
+    "## 5. Conclusão ##\n"
    ]
   }
  ],
@@ -177,15 +196,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.11.2",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.0"
+   "version": "1.11.2"
   }
  },
  "nbformat": 4,
