--- a/grupo1/trabalho1_portfolio.ipynb
+++ b/grupo1/trabalho1_portfolio.ipynb
@@ -169,15 +169,47 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
    "source": [
-    "## 4. Comparação com Markowitz ##\n"
+    "# Nesse script foi feito o modelo usando médias e variância aleatórias para testar, e foi obtido um retorno esperado de 11.9%\n",
+    "using JuMP\n",
+    "using COSMO\n",
+    "using LinearAlgebra\n",
+    "using Random\n",
+    "using Distributions\n",
+    "\n",
+    "n = 5\n",
+    "Random.seed!(123)\n",
+    "\n",
+    "p = rand(0.05:0.01:0.15, n)\n",
+    "\n",
+    "Σ = Symmetric(rand(0.01:0.01:0.05, n, n))\n",
+    "Σ += Diagonal(ones(n)) * 0.1 \n",
+    "\n",
+    "α = 0.95\n",
+    "Φ_inv = quantile(Normal(0, 1), α)\n",
+    "R_min = 0.08\n",
+    "\n",
+    "model = Model(COSMO.Optimizer)\n",
+    "\n",
+    "@variable(model, x[1:n] >= 0)\n",
+    "@variable(model, t >= 0)\n",
+    "\n",
+    "@objective(model, Max, dot(p, x))\n",
+    "\n",
+    "@constraint(model, sum(x) == 1)\n",
+    "\n",
+    "@constraint(model, p'x - Φ_inv * t >= R_min)\n",
+    "@constraint(model, [Σ^(1/2) * x; t] in SecondOrderCone())\n",
+    "\n",
+    "optimize!(model)\n",
+    "\n",
+    "if termination_status(model) == MOI.OPTIMAL\n",
+    "    println(\"Solução ótima encontrada:\")\n",
+    "    println(\"Alocação: \", value.(x))\n",
+    "    println(\"Retorno esperado: \", dot(p, value.(x)))\n",
+    "else\n",
+    "    println(\"Falha na obtenção de solução ótima.\")\n",
+    "end"
    ]
   },
   {
@@ -186,7 +218,79 @@
     "collapsed": true
    },
    "source": [
-    "## 5. Conclusão ##\n"
+    "## 4. Comparação com Markowitz ##\n",
+    "\n",
+    "A comparação com o QP de Markowitz pode ser feita de diversas formas, o seguinte script retorna um valor esperado de 0.327% com um risco de 4.46% que são ligeiramente melhores que o de Markowitz, principalmente ao considerarmos que para o valor esperado chegar perto disso (0.34% no Markowitz) foi necessário colocar um risco relativamente algo no valor de $\\lambda$, de forma que torna inviável correr tanto riscos para ter retorno, que mostra um primeiro ponto a favor do modelo probabilístico, apesar dos riscos grandes do mesmo, mas com um valor de confiabilidade alto isso pode ser resolvido. Além do probabilístico ser mais robusto a incertezas justamente por ser uma parte fundamental do próprio modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using JuMP\n",
+    "using COSMO\n",
+    "using LinearAlgebra\n",
+    "using CSV\n",
+    "using DataFrames\n",
+    "using Distributions\n",
+    "using PyPlot\n",
+    "\n",
+    "p_df = CSV.read(\"folio_mean.csv\", DataFrame)\n",
+    "p = Matrix(p_df)[:, 1]\n",
+    "\n",
+    "Σ_df = CSV.read(\"folio_cov.csv\", DataFrame)\n",
+    "Σ = Matrix(Σ_df[:, 2:end])\n",
+    "Σ = Symmetric(Σ)\n",
+    "\n",
+    "n = length(p)\n",
+    "\n",
+    "α = 0.95\n",
+    "Φ_inv = quantile(Normal(0, 1), α)\n",
+    "R_min = 0.0031\n",
+    "\n",
+    "model = Model(COSMO.Optimizer)\n",
+    "\n",
+    "@variable(model, x[1:n] >= 0)\n",
+    "@variable(model, t >= 0)\n",
+    "\n",
+    "@objective(model, Max, dot(p, x))\n",
+    "@constraint(model, sum(x) == 1)\n",
+    "@constraint(model, p'x - Φ_inv * t >= R_min)\n",
+    "@constraint(model, [Σ^(1/2) * x; t] in SecondOrderCone())\n",
+    "\n",
+    "optimize!(model)\n",
+    "\n",
+    "if termination_status(model) == MOI.OPTIMAL\n",
+    "    xsol = value.(x)\n",
+    "    ret = dot(p, xsol)\n",
+    "    std = sqrt(dot(xsol, Σ * xsol))\n",
+    "\n",
+    "    figure(figsize=(12, 6))\n",
+    "    bar(1:n, xsol, color=\"blue\")\n",
+    "    title(string(\"Otimização - Portfolio\\n\",\n",
+    "                 \"Retorno esperado (p): \", round(ret * 100, digits=3), \"%, \",\n",
+    "                 \"Risco (σ): \", round(std * 100, digits=2), \"%\"))\n",
+    "    xlabel(\"Ativos\")\n",
+    "    ylabel(\"Alocação\")\n",
+    "    xlim(0, n + 1)\n",
+    "    tight_layout()\n",
+    "    show()\n",
+    "else\n",
+    "    println(\"Falha na obtenção de solução ótima.\")\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 5. Conclusão ##\n",
+    "\n",
+    "Dessa forma, podemos concluir que o melhor modelo depende da situação em que vai ser aplicado, se precisar de um modelo mais robusto mas que sofra alguns riscos, o probabilístico se encaixa, caso queira um modelo mais simples que garanta que vai ter retorno dependendo do valor de risco que for aplicado, a escolha é o de Markowitz. A abordagem probabilística, ao incorporar distribuições acumuladas oferece maior proteção a cenários adversos como em mercados voláteis. Os resultados obtidos evidenciam que a probabilística, apesar de mais complexa computacionalmente, proporciona alocações de ativos mais confiáveis, especialmente em contextos onde incertezas e choques de mercado desempenham um papel relevante. Isso reforça sua aplicabilidade em cenários reais, onde retornos frequentemente não seguem distribuições normais e eventos extremos podem impactar significativamente o desempenho dos portfólios"
    ]
   }
  ],
